--- a/images/index.html
+++ b/images/index.html
@@ -11,34 +11,36 @@
    <style>
      body{background-color:white;
           font-family:Roboto,Open Sans;}
-      <div class="container-fluid">
-  <div class="row">
-    <div class="col-3 menu">   git add
-
    </style> 
    </head>
    <body>
+    <div class="container-fluid">
+  <div class="row">
+  </div>
+
     <h1>When Life Gives You Lemons, You know what to do!</h1>
     <h2>Delicious Lemonade</h2>
-        <div>
-            <p>Recipe by: Lizbeth Garcia</p>
+        <div class 
+         <p>Recipe by: Lizbeth Garcia</p>
+   
+    <div class="row>"         
+    <div class="col-3 menu"> 
+        <ul>
+        <li>Recipe 1</li>
+        <li>Recipe 2</li>
+        <li>Recipe 3</li>
+        <li>Recipe 4</li>
+        </ul>
+     </div>       
+     <div class="col">     
             <figure>
             <img src="images/lemonade.jpeg" alt="Refreshing glass of lemonade" height="250">
-            <figcaption>https://pixnio.com/media/beverage-cocktail-fresh-water-kernel-lemon</figcaption>
+            <figcaption>Photo by:pixel</figcaption>
                 </figure>
         </div>
-   <div class="row">
-    <div class="col" style="width:25%">   
-    <h3>Ingredients:</h3> 
-        <ul>
-            <li>5 lemons</li>  
-            <li>5 cups water</li>  
-            <li>1 cup sugar</li>  
-        </ul>
-    </div>
-    <div class="col">
+     <div class="col">
      <h3 class="rate">Rate This Recipe</h3>
-    <fieldset style="width: 250px;">
+    <fieldset style="width: 300px;">
       <legend>How difficult is this recipe?</legend>
         <input type="radio" id="easy" name="easy"> Easy
         <input type="radio" id="med" name="med">Intermediate
@@ -47,8 +49,16 @@
     <p>&nbsp;</p>
     <h3>Conversion</h3>
     <input type="text" id="tblspn" name ="tblspn">
-    =
-    <input type="text" id="cups" name="cups">
+    = <input type="text" id="cups" name="cups">  
+    </div>  
+   <div class="row">
+    <div class="col" style="width:25%">   
+    <h3>Ingredients:</h3> 
+        <ul>
+            <li>5 lemons</li>  
+            <li>5 cups water</li>  
+            <li>1 cup sugar</li>  
+        </ul>
     </div>
     <div class="col" style="width:15%">
     <!--<h3>Equipment:</h3> 
