--- a/images/index.html
+++ b/images/index.html
@@ -79,6 +79,9 @@
         </ol>  
         <hr />
         <p>This page created as academic activity only.</p>
-       
+ </div>
+ </div>
+ </div>
+     
  </body>
 </html>
